# metal-imgui-example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.sh  setup_dependencies.sh
.github/workflows/: cmake.yml
imgui/: imgui_impl_metal_cpp.cpp
metal-cpp-beta/: CMakeLists.txt
metal-cpp-beta/metal-cpp-beta/: metal-cpp-beta.h
scripts/metal/: compile.sh
src/: main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
src/shaders/: ShaderTypes.h  color.metal  deferred.metal  position.metal
